--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1826,7 +1826,7 @@ body {
   color: #ac3b61 !important;
 }
 .cid-rBcbu0H0hB {
-  background-image: url("../../../assets/images/Untitled\ design\ \(2\).png");
+  background-image: url("assets/images/blank-business-composition-373076-2000x1333.jpg");
 }
 .cid-rBcbu0H0hB .mbr-section-subtitle {
   font-style: italic;
@@ -1983,7 +1983,7 @@ body {
   top: 0px;
   left: 0px;
   text-align: center;
-  background-color: #eee;
+  
 }
 .cid-rBdbl0HdJA .card-front {
   z-index: 2;
